# endurox-python

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md  README.rst  setup.py  test.py
cmake_example/: __init__.py  math.py
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  endurox.rst
endurox/: __init__.py
src/: endurox.cpp  main.cpp
src/endurox/: __init__.py  bufconv.cpp  bufconv_ubf.cpp  bufconv_view.cpp  endurox.cpp  endurox_atmi.cpp  endurox_srv.cpp  endurox_xatmi.cpp  exceptions.h  ndrx_pymod.h  tpext.cpp  tplog.cpp  xatmibuf.cpp
tests/: basic_test.py  test_basic.py  test_runner.py
tests/libs/: exutils.py
tests/test001_buffers/: run.sh
tests/test001_tpcall/: run.sh
tests/test001_tpcall/runtime/conf/: ndrxconfig.xml
tests/test002_xatmiipc/: run.sh
tests/test002_xatmiipc/runtime/conf/: ndrxconfig.xml
tests/test002_xatmipc/: run.sh
tests/test002_xatmipc/runtime/conf/: 0py.ini
tests/test003_tmq/: run.sh
tests/test003_tmq/runtime/conf/: 0py.ini
tests/test004_util/: run.sh
tests/test004_util/runtime/conf/: ndrxconfig.xml
tests/test005_oraclexa/runtime/conf/: 0py.ini
tests/views/: CMakeLists.txt  test_view.v_in
